--- a/demo.html
+++ b/demo.html
@@ -1,86 +1,209 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        *{
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
-        #product{
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-evenly;
-        }
-        #product_first{
-            width: 100%;
-            text-align: center;
-        }
-
-        .product_combine{
-            width: 100%;
-            margin: 5px ;
-            border: 1px solid ;
-            text-align: center;
-        }
-        .product_combine img{
-            width: 100%;
-        }
-        button{
-            margin: 10px 0px;
-            padding: 5px;
-            background-color: green;
-            color: white;
-            border-radius: 5px;
-            border: none;
-        }
-
-        /* @media only screen and (min-width:768px)
-        {
-            .product_combine{
-                width: 47%;
-            }
-            button{
-                background-color: red;
-            }
-        }
-        @media only screen and (min-width:1200px)
-        {
-            .product_combine{
-                width: 23%;
-            }
-        } */
-    </style>
+    <title>Organic</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-       <section id="product">
 
-           <div id="product_first">
-            <h2>Winter Wellness Products</h2>
-           </div>
-           <div class="product_combine">
-            <img src="https://organicindia.com/cdn/shop/files/Chyawanprash1_558X600_crop_center.jpg?v=1713250497" alt="">
-            <p>Lorem ipsum dolor sit amet.</p>
-            <button>Buy now</button>
-           </div>
-           <div class="product_combine">
-            <img src="https://organicindia.com/cdn/shop/files/Chyawanprash1_558X600_crop_center.jpg?v=1713250497" alt="">
-            <p>Lorem ipsum dolor sit amet.</p>
-            <button>Buy now</button>
-           </div>
-           <div class="product_combine">
-            <img src="https://organicindia.com/cdn/shop/files/Chyawanprash1_558X600_crop_center.jpg?v=1713250497" alt="">
-            <p>Lorem ipsum dolor sit amet.</p>
-            <button>Buy now</button>
-           </div>
-           <div class="product_combine">
-            <img src="https://organicindia.com/cdn/shop/files/Chyawanprash1_558X600_crop_center.jpg?v=1713250497" alt="">
-            <p>Lorem ipsum dolor sit amet.</p>
-            <button>Buy now</button>
-           </div>
-       </section>
+<body>
+    <section id="container">
+        <header>
+            <div>
+                <img src="https://organicindia.com/cdn/shop/files/logo_120x80_e4eac21f-db47-4eab-8bac-8e0befb2e235.png?v=1666268578"
+                    alt="">
+            </div>
+            <div id="navbar">
+                <nav>
+                    <a href="">Home</a>
+                    <a href="">Home</a>
+                    <a href="">Home</a>
+                    <a href="">Home</a>
+                </nav>
+            </div>
+            <div>
+                <span>Icon</span>
+                <span>Icon</span>
+                <span>Icon</span>
+                <span>Icon</span>
+            </div>
+        </header>
+
+        <main>
+            <section id="herosection">
+                <div>
+                    <img src="https://organicindia.com/cdn/shop/files/republic_day_banner_1920x600-01-01-01_1.jpg?v=1737709891"
+                        alt="">
+                </div>
+            </section>
+
+            <section id="circle">
+                <div class="circle_item">
+                    <img src="https://organicindia.com/cdn/shop/files/tea_2_1.png?v=1737615774" alt="">
+                    <p>Teas & Infusions</p>
+                </div>
+                <div class="circle_item">
+                    <img src="https://organicindia.com/cdn/shop/files/tea_2_1.png?v=1737615774" alt="">
+                    <p>Teas & Infusions</p>
+                </div>
+                <div class="circle_item">
+                    <img src="https://organicindia.com/cdn/shop/files/tea_2_1.png?v=1737615774" alt="">
+                    <p>Teas & Infusions</p>
+                </div>
+                <div class="circle_item">
+                    <img src="https://organicindia.com/cdn/shop/files/tea_2_1.png?v=1737615774" alt="">
+                    <p>Teas & Infusions</p>
+                </div>
+                <div class="circle_item">
+                    <img src="https://organicindia.com/cdn/shop/files/tea_2_1.png?v=1737615774" alt="">
+                    <p>Teas & Infusions</p>
+                </div>
+                <div class="circle_item">
+                    <img src="https://organicindia.com/cdn/shop/files/tea_2_1.png?v=1737615774" alt="">
+                    <p>Teas & Infusions</p>
+                </div>
+                <div class="circle_item">
+                    <img src="https://organicindia.com/cdn/shop/files/tea_2_1.png?v=1737615774" alt="">
+                    <p>Teas & Infusions</p>
+                </div>
+                <div class="circle_item">
+                    <img src="https://organicindia.com/cdn/shop/files/tea_2_1.png?v=1737615774" alt="">
+                    <p>Teas & Infusions</p>
+                </div>
+            </section>
+
+            <section id="product">
+                <div id="product_uniq">
+                    <h2>Winter Wellness Products
+                    </h2>
+                </div>
+                <div class="product_combine">
+                    <img src="https://organicindia.com/cdn/shop/files/051A4754_558X600_crop_center.jpg?v=1713868478"
+                        alt="">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <button>Add to cart</button>
+                </div>
+                <div class="product_combine">
+                    <img src="https://organicindia.com/cdn/shop/files/051A4754_558X600_crop_center.jpg?v=1713868478"
+                        alt="">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <button>Add to cart</button>
+                </div>
+                <div class="product_combine">
+                    <img src="https://organicindia.com/cdn/shop/files/051A4754_558X600_crop_center.jpg?v=1713868478"
+                        alt="">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <button>Add to cart</button>
+                </div>
+                <div class="product_combine">
+                    <img src="https://organicindia.com/cdn/shop/files/051A4754_558X600_crop_center.jpg?v=1713868478"
+                        alt="">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <button>Add to cart</button>
+                </div>
+            </section>
+
+            <section id="tulsi">
+                <div class="tulsi_child">
+                    <img src="https://organicindia.com/cdn/shop/files/613X630-tulsi-farm-image.png?v=1666268098" alt="" id="uni">
+                </div>
+                <div class="tulsi_child">
+                    <h2>GET THE ‘TULSI’ WELLNESS EDGE</h2>
+
+                    <div class="parent">
+                        <div class="parent_imgchild">
+                            <img src="https://organicindia.com/cdn/shop/files/icon-1.png?v=1667396330" alt="">
+                        </div>
+                        <div class="parent_txtchild">
+                            <h4>GUARD AGAINST COUGH, COLD & POLLUTION</h4>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum quia veritatis iste eos
+                                aperiam repellendus mollitia itaque adipisci maiores? Nihil officia esse nostrum ipsa
+                                similique! Voluptas vitae fugit placeat iure.</p>
+                        </div>
+                        <div class="parent_imgchild">
+                            <img src="https://organicindia.com/cdn/shop/files/icon-1.png?v=1667396330" alt="">
+                        </div>
+                        <div class="parent_txtchild">
+                            <h4>GUARD AGAINST COUGH, COLD & POLLUTION</h4>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum quia veritatis iste eos
+                                aperiam repellendus mollitia itaque adipisci maiores? Nihil officia esse nostrum ipsa
+                                similique! Voluptas vitae fugit placeat iure.</p>
+                        </div>
+                        <div class="parent_imgchild">
+                            <img src="https://organicindia.com/cdn/shop/files/icon-1.png?v=1667396330" alt="">
+                        </div>
+                        <div class="parent_txtchild">
+                            <h4>GUARD AGAINST COUGH, COLD & POLLUTION</h4>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum quia veritatis iste eos
+                                aperiam repellendus mollitia itaque adipisci maiores? Nihil officia esse nostrum ipsa
+                                similique! Voluptas vitae fugit placeat iure.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section id="healthy">
+                <div>
+                    <h2>HEALTHY CONSCIOUS LIVING
+                        Healthy Conscious Livi</h2>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum perferendis sapiente nesciunt nihil suscipit fugiat repellat magnam, corporis perspiciatis, omnis illum quos explicabo neque amet temporibus iure exercitationem. Eius, laborum!
+                        Id, ipsum. Libero cumque dignissimos, explicabo ea deserunt praesentium itaque animi necessitatibus veniam labore non nobis eum pariatur consequuntur blanditiis possimus porro fugit incidunt obcaecati eligendi molestiae? Atque, odit beatae.
+                        Alias, architecto, placeat aspernatur amet quibusdam quisquam neque excepturi deserunt unde accusamus adipisci consequatur ratione, recusandae quam! Adipisci odio dolorum recusandae nostrum veniam ex autem. Odit quaerat qui odio ratione.</p>
+                        <button>SHOP NOW</button>
+                </div>
+                <div>
+                    <img src="https://organicindia.com/cdn/shop/files/1240X1020-Video-Thumbnail_27360147-2798-488b-8763-e27ceca85973.png?v=1676028945" alt="">
+                </div>
+            </section>
+            <section id="review">
+                    <div>
+                        <h2>customers lovecustomers love</h2>
+                        <img src="https://organicindia.com/cdn/shop/files/shradhya_88x88_crop_center.png?v=1667394204" alt="">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut inventore harum asperiores assumenda nesciunt in ea perferendis soluta, molestias reiciendis temporibus quia voluptatibus at ducimus nostrum corporis maxime, voluptas numquam.</p>
+                    </div>
+            </section>
+        </main>
+        <footer>
+             <div>
+                 <ul type="none">
+                    <li>Footer</li>
+                    <li>Footer</li>
+                    <li>Footer</li>
+                    <li>Footer</li>
+                    <li>Footer</li>
+                </ul>
+             </div>
+             <div>
+                 <ul type="none">
+                    <li>Footer</li>
+                    <li>Footer</li>
+                    <li>Footer</li>
+                    <li>Footer</li>
+                    <li>Footer</li>
+                </ul>
+             </div>
+             <div>
+                 <ul type="none">
+                    <li>Footer</li>
+                    <li>Footer</li>
+                    <li>Footer</li>
+                    <li>Footer</li>
+                    <li>Footer</li>
+                </ul>
+             </div>
+             <div>
+                 <ul type="none">
+                    <li>Footer</li>
+                    <li>Footer</li>
+                    <li>Footer</li>
+                    <li>Footer</li>
+                    <li>Footer</li>
+                </ul>
+             </div>
+        </footer>
+    </section>
 </body>
+
 </html>
