--- a/CSS-practice/about.html
+++ b/CSS-practice/about.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Home Page</h1>
+    <h1>About Page</h1>
      <header>
         <nav>
             <a href="index.html">Home</a>
