--- a/CSS-practice/contact.html
+++ b/CSS-practice/contact.html
@@ -6,9 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Home Page</h1>
+    <h1>Contact Page</h1>
      <header>
         <nav>
+            <img src="Images/051A3701_558X600_crop_center.jpg" alt="">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
